--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "savedaybackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node backend/index.js",
+    "server": "nodemon backend/index.js",
+    "client": "npm start --prefix frontend",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "type": "module",
   "author": "Hadrien Jaubert",
@@ -15,6 +17,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "concurrently": "^7.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
